# navara

./: .clinerules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DRAPED_MESH_DESIGN.md  Makefile.toml  PLAN.md  PR_DESCRIPTION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/martini/: Cargo.toml
crates/martini/src/: lib.rs
crates/martini/tests/: integration.rs
crates/navara_b3dm/: Cargo.toml  README.md
crates/navara_b3dm/src/: lib.rs  property_value.rs  types.rs
crates/navara_bin/: Cargo.toml  README.md
crates/navara_bin/src/: lib.rs
crates/navara_camera/: Cargo.toml  README.md
crates/navara_camera/src/: comp.rs  event.rs  follow.rs  helpers.rs  lib.rs  plugin.rs  system.rs
crates/navara_cesiumtiles/: Cargo.toml  README.md
crates/navara_cesiumtiles/src/: tileset.rs
crates/navara_core/: Cargo.toml  README.md
crates/navara_core/src/: aabb.rs  bounding_volume.rs  coord.rs  ellipsoid.rs  ellipsoid_geodesic.rs  ellipsoid_tangent_plane.rs  encoding.rs  extent.rs  intersection_tests.rs  lib.rs  obb.rs  plane.rs  ray.rs  scale_to_geodetic_surface.rs  tiles.rs  transform.rs  unit.rs
crates/navara_core/src/math/: epsilon.rs  mod.rs  pi.rs
crates/navara_core/src/terrain/: decoder.rs  geometric_error.rs
crates/navara_core/src/utils/: easing.rs  lerp.rs  mod.rs
crates/navara_data_requester/: Cargo.toml  README.md
crates/navara_data_requester/src/: component.rs  data_manager.rs  lib.rs  manager.rs
crates/navara_ecs/: Cargo.toml  README.md
crates/navara_ecs/src/: app.rs  batch_property.rs  lib.rs
crates/navara_ecs/src/buffer/: mod.rs
crates/navara_ecs/src/camera/: comp.rs
crates/navara_ecs/src/event/: res.rs
crates/navara_ecs/src/feature/: polygon.rs
crates/navara_ecs/src/object/: cache.rs
crates/navara_ecs/src/occluder/: mod.rs  system.rs
crates/navara_ecs/src/texture_fragment/: mod.rs
crates/navara_ecs/src/utils/: camera.rs
crates/navara_ecs/src/window/: mod.rs
crates/navara_event/: Cargo.toml  README.md
crates/navara_event/src/: events.rs  lib.rs
crates/navara_feature/: Cargo.toml  README.md
crates/navara_feature/src/: batch.rs  event.rs  lib.rs  render.rs
crates/navara_feature/src/billboard/: component.rs  mesh.rs  mod.rs  system.rs
crates/navara_feature/src/geometry/: point.rs
crates/navara_feature/src/model/: component.rs  system.rs
crates/navara_feature/src/point/: component.rs  mesh.rs  system.rs
crates/navara_feature/src/polygon/: component.rs  system.rs
crates/navara_feature/src/polyline/: component.rs  system.rs
crates/navara_feature/src/text/: system.rs
crates/navara_feature_component/: Cargo.toml
crates/navara_feature_component/src/: batch.rs  batched_geometry.rs  geometry_builder.rs  id.rs  lib.rs  marker.rs  render.rs  unique_id.rs
crates/navara_feature_component/src/polygon/: component.rs  construct.rs
crates/navara_feature_component/src/polyline/: component.rs  construct.rs  (+1 more)
crates/navara_font/: Cargo.toml  README.md
crates/navara_font/src/: atlas.rs  component.rs  lib.rs  resource.rs  shaping.rs  system.rs
crates/navara_frame/: Cargo.toml  README.md
crates/navara_frame/src/: lib.rs
crates/navara_geojson/: Cargo.toml  README.md
crates/navara_geojson/src/: geometry.rs  lib.rs  system.rs
crates/navara_geojson_vt/: Cargo.toml  README.md
crates/navara_geojson_vt/src/: clip.rs  convert.rs  lib.rs  simplify.rs  split.rs  tile.rs  types.rs  wrap.rs
crates/navara_geojson_vt/tests/: common.rs  full.rs  get_tile.rs  multi_world.rs
crates/navara_geometry/: Cargo.toml
crates/navara_geometry/src/: attribute.rs  geometry.rs  lib.rs  tile.rs
crates/navara_glb/: Cargo.toml  README.md
crates/navara_glb/src/: lib.rs
crates/navara_input/: Cargo.toml  README.md
crates/navara_input/src/: keyboard.rs  lib.rs  mouse.rs  touch.rs
crates/navara_layer/: Cargo.toml  README.md
crates/navara_layer/src/: appearance.rs  b3dm.rs  cesium3dtiles.rs  data.rs  descriptor.rs  event.rs  geojson.rs  layer_desc_store.rs  layer_id.rs  layer_store.rs  lib.rs  mvt.rs  pnts.rs  terrain.rs  tile.rs
crates/navara_layer_event/: Cargo.toml  README.md
crates/navara_layer_event/src/: event.rs  lib.rs
crates/navara_material/: Cargo.toml  README.md
crates/navara_material/src/: appearance.rs  lib.rs
crates/navara_math/: Cargo.toml  README.md
crates/navara_math/src/: coord.rs  epsilon.rs  float.rs  lib.rs  pi.rs  transform.rs  trigonometry.rs  vertex.rs
crates/navara_mesh/: Cargo.toml  README.md
crates/navara_mesh/src/: cache.rs  lib.rs
crates/navara_mock/: Cargo.toml  README.md
crates/navara_mock/src/: camera.rs  lib.rs
map_engine_ecs/: Cargo.toml
map_engine_ecs/src/: app.rs  lib.rs
map_engine_ecs/src/buffer/: mod.rs  store.rs
map_engine_ecs/src/camera/: comp.rs  mod.rs  plugin.rs  system.rs
map_engine_ecs/src/event/: mod.rs  model.rs  res.rs
map_engine_ecs/src/input/: keyboard.rs  mod.rs  mouse.rs
map_engine_ecs/src/map/: event.rs  layer.rs  mod.rs  tile.rs  tile_bounding_region.rs
map_engine_ecs/src/object/: mod.rs
map_engine_ecs/src/primitives/: aabb.rs  mod.rs
map_engine_ecs/src/utils/: coord.rs
martini/: Cargo.toml  README.md
martini/src/: lib.rs
martini/tests/: integration.rs
navara_ecs/: Cargo.toml
navara_ecs/src/: app.rs  lib.rs
navara_ecs/src/buffer/: mod.rs
navara_ecs/src/camera/: comp.rs  plugin.rs  system.rs
navara_ecs/src/event/: model.rs  res.rs
navara_ecs/src/map/: event.rs  layer.rs  mod.rs  tile.rs  tile_bounding_region.rs  tile_cache_manager.rs
navara_ecs/src/object/: mod.rs
navara_ecs/src/occluder/: ellipsoidal_occluder.rs
navara_ecs/src/primitives/: aabb.rs  plane.rs
navara_ecs/src/texture_fragment/: mod.rs
navara_ecs/src/transform/: mod.rs
navara_ecs/src/utils/: coord.rs  lerp.rs  mod.rs
navara_ecs/src/window/: mod.rs
navara_quadtree/: Cargo.toml
navara_quadtree/src/: lib.rs  quadtree.rs  region_quadtree.rs  traits.rs  utils.rs
navara_wasm/: Cargo.toml
navara_wasm/src/: appearance.rs  event.rs  input.rs  lib.rs  types.rs  unit.rs
navara_wasm/src/event/: feature.rs  feature_event.rs  mod.rs
(+2562 files in other folders)
