[workspace]

resolver = "2"

members = [
    "crates/*",
]

[workspace.package]
rust-version = "1.93.0"
edition = "2024"
license = "MIT/Apache-2.0"

[workspace.dependencies]
# --- Bevy ---
bevy_app = "=0.18.1"
bevy_ecs = { version = "=0.18.1", features = ["serialize"] }
bevy_input = { version = "=0.18.1", features = ["mouse", "keyboard"] }
bevy_log = "=0.18.1"
bevy_math = "=0.18.1"
bevy_transform = "=0.18.1"

# --- Serialization ---
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.149", features = ["alloc", "float_roundtrip", "indexmap"] }
serde_repr = "=0.1.20"
serde-wasm-bindgen = "=0.6.5"
binrw = { version = "=0.15.1", default-features = false }

# --- Utility ---
approx = "=0.5.1"
url = "=2.5.8"
cfg-if = "=1.0.4"
radians = "=0.3.1"
itertools = "=0.14.0"
rustc-hash = "=2.1.2"
num = "=0.4.3"
regex = "=1.12.3"

# --- Geo ---
geo-types = "=0.7.19"
geojson_lib = { package = "geojson", version = "=1.0.0" }
earcutr = "=0.5.0"
# geozero = { version = "0.15.1", default-features = false, features = ["with-mvt", "with-geo"] }
# TODO: Replace to original later
geozero = { git = "https://github.com/keiya01/geozero.git", branch = "fix/ccw-mvt", default-features = false, features = ["with-mvt", "with-geo"] }
prost = "=0.14.3"

# --- Time ---
instant = { version = "=0.1.13", features = ["wasm-bindgen", "inaccurate"] }

# --- Random ---
rand = "=0.10.1"
getrandom = { version = "=0.4.2", features = ["wasm_js"] }

# --- WASM ---
wasm-bindgen = "=0.2.118"
js-sys = "=0.3.95"
gloo-utils = { version = "=0.3.0", features = ["serde"] }
web-sys = { version = "=0.3.95", features = ["console"] }
console_error_panic_hook = "=0.1.7"

# --- Font ---
rustybuzz = "=0.20.1"
fontdue = "=0.9.3"
sdf_glyph_renderer = "=1.1.0"
guillotiere = "=0.7.0"
wuff = "=0.2.3"
skrifa = "=0.42.1"
tiny-skia = { version = "=0.12.0", default-features = false, features = ["std", "simd"] }

# --- Testing ---
wasm-bindgen-test = "=0.3.68"
image = { version = "=0.25.10", default-features = false, features = ["png"] }

# --- External Git Dependencies ---
cesiumtiles = { git = "https://github.com/reearth/cesiumtiles-rs.git" }
mvt-reader = { git = "https://github.com/reearth/mvt-reader.git" }

# --- Internal Crates ---
martini = { path = "crates/martini" }
navara_b3dm = { path = "crates/navara_b3dm" }
navara_bin = { path = "crates/navara_bin" }
navara_buffer_store = { path = "crates/navara_buffer_store" }
navara_camera = { path = "crates/navara_camera" }
navara_cesium3dtiles = { path = "crates/navara_cesium3dtiles" }
navara_cesiumtiles = { path = "crates/navara_cesiumtiles" }
navara_component = { path = "crates/navara_component" }
navara_core = { path = "crates/navara_core" }
navara_data_requester = { path = "crates/navara_data_requester" }
navara_ecs = { path = "crates/navara_ecs" }
navara_event = { path = "crates/navara_event" }
navara_event_store = { path = "crates/navara_event_store" }
navara_feature = { path = "crates/navara_feature" }
navara_feature_component = { path = "crates/navara_feature_component" }
navara_fog = { path = "crates/navara_fog" }
navara_frame = { path = "crates/navara_frame" }
navara_geojson = { path = "crates/navara_geojson" }
navara_geojson_vt = { path = "crates/navara_geojson_vt" }
navara_geometry = { path = "crates/navara_geometry" }
navara_glb = { path = "crates/navara_glb" }
navara_globe = { path = "crates/navara_globe" }
navara_input = { path = "crates/navara_input" }
navara_layer = { path = "crates/navara_layer" }
navara_layer_event = { path = "crates/navara_layer_event" }
navara_material = { path = "crates/navara_material" }
navara_math = { path = "crates/navara_math" }
navara_mesh = { path = "crates/navara_mesh" }
navara_mock = { path = "crates/navara_mock" }
navara_mvt = { path = "crates/navara_mvt" }
navara_occluder = { path = "crates/navara_occluder" }
navara_parser = { path = "crates/navara_parser" }
navara_pnts = { path = "crates/navara_pnts" }
navara_quadtree = { path = "crates/navara_quadtree" }
navara_texture_fragment = { path = "crates/navara_texture_fragment" }
navara_tile = { path = "crates/navara_tile" }
navara_vector_tile = { path = "crates/navara_vector_tile" }
navara_tile_component = { path = "crates/navara_tile_component" }
navara_wasm = { path = "crates/navara_wasm" }
navara_wasm_api = { path = "crates/navara_wasm_api" }
navara_wasm_transferable = { path = "crates/navara_wasm_transferable" }
navara_wasm_types = { path = "crates/navara_wasm_types" }
navara_wasm_utils = { path = "crates/navara_wasm_utils" }
navara_wasm_worker = { path = "crates/navara_wasm_worker" }
navara_window = { path = "crates/navara_window" }
navara_worker = { path = "crates/navara_worker" }
navara_property = { path = "crates/navara_property" }


[workspace.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[profile.release]
# Optimize for small code size (for WASM modules)
opt-level = "s"
