[package]
name = "martini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
bevy_ecs = { version = "0.12.1", optional = true }

[dev-dependencies]
image = "0.25.2"
