[package]
name = "navara_ecs"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
bevy_app = "0.12.1"
bevy_ecs = "0.12.1"
bevy_input = "0.12.1"
bevy_log = "0.12.1"
bevy_math = "0.12.1"
bevy_time = "0.12.1"
bevy_transform = "0.12.1"
instant = "0.1.12"
navara_core = { path = "../navara_core" }
navara_geometry = { path = "../navara_geometry" }
navara_quadtree = { path = "../navara_quadtree", features = ["bevy"] }
