[package]
name = "navara_quadtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bevy = ["dep:bevy_ecs"]

[dependencies]
num = "0.4.3"
quadtree_rs = "0.1.3"
bevy_ecs = { version = "0.12.1", optional = true }
