[package]
name = "navara_wasm"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.65"
navara_core = { path = "../navara_core" }
navara_ecs = { path = "../navara_ecs" }
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"

[dependencies.web-sys]
version = "0.3.65"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
