[package]
name = "martini"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
navara_math = { path = "../navara_math" }

[dev-dependencies]
image = "0.25.8"
approx.workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true