[package]
name = "martini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
navara_math = { path = "../navara_math" }

[dev-dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }
approx.workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true