[package]
name = "navara_b3dm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
binrw = { version = "0.13.3", default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false, features = ["alloc"] }
navara_bin = { path = "../navara_bin" }
navara_glb = { path = "../navara_glb" }

[dev-dependencies]
approx.workspace = true
