[package]
name = "navara_b3dm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
binrw.workspace = true
serde.workspace = true
serde_json.workspace = true
navara_bin = { path = "../navara_bin" }
navara_glb = { path = "../navara_glb" }

[dev-dependencies]
approx.workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true