[package]
name = "navara_camera"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_input.workspace = true
bevy_log.workspace = true
approx.workspace = true
navara_core.workspace = true
navara_frame.workspace = true
navara_math.workspace = true
navara_event_store.workspace = true
navara_input.workspace = true
navara_window.workspace = true
