[package]
name = "navara_cesiumtiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
serde.workspace = true
serde_json = { version = "1.0.145", features = ["float_roundtrip", "indexmap"] }
serde_repr = "0.1.20"
cesiumtiles = { git = "https://github.com/reearth/cesiumtiles-rs.git" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
