[package]
name = "navara_data_requester"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_buffer_store = { path = "../navara_buffer_store" }
navara_event_store = { path = "../navara_event_store" }
navara_component = { path = "../navara_component" }
url.workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

