[package]
name = "navara_data_requester"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
url.workspace = true
navara_buffer_store.workspace = true
navara_event_store.workspace = true
navara_component.workspace = true
