[package]
name = "navara_ecs"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
bevy_app = "0.14.1"
bevy_ecs = "0.14.1"
bevy_log = "0.14.1"
bevy_time = "0.14.1"
navara_buffer_store = { path = "../navara_buffer_store" }
navara_camera = { path = "../navara_camera" }
navara_data_requester = { path = "../navara_data_requester" }
navara_event = { path = "../navara_event" }
navara_event_store = { path = "../navara_event_store" }
navara_feature = { path = "../navara_feature" }
navara_geojson = { path = "../navara_geojson" }
navara_input = { path = "../navara_input" }
navara_layer = { path = "../navara_layer" }
navara_layer_event = { path = "../navara_layer_event" }
navara_mesh = { path = "../navara_mesh" }
navara_occluder = { path = "../navara_occluder" }
navara_texture_fragment = { path = "../navara_texture_fragment" }
navara_tile = { path = "../navara_tile" }
navara_window = { path = "../navara_window" }
navara_math = { path = "../navara_math" }