[package]
name = "navara_ecs"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
bevy_time.workspace = true
navara_buffer_store = { path = "../navara_buffer_store" }
navara_camera = { path = "../navara_camera" }
navara_data_requester = { path = "../navara_data_requester" }
navara_event = { path = "../navara_event" }
navara_event_store = { path = "../navara_event_store" }
navara_feature = { path = "../navara_feature" }
navara_geojson = { path = "../navara_geojson" }
navara_input = { path = "../navara_input" }
navara_layer = { path = "../navara_layer" }
navara_layer_event = { path = "../navara_layer_event" }
navara_mesh = { path = "../navara_mesh" }
navara_occluder = { path = "../navara_occluder" }
navara_texture_fragment = { path = "../navara_texture_fragment" }
navara_tile = { path = "../navara_tile" }
navara_tile_component = { path = "../navara_tile_component" }
navara_window = { path = "../navara_window" }
navara_math = { path = "../navara_math" }
navara_cesium3dtiles = { path = "../navara_cesium3dtiles" }
navara_mvt = { path = "../navara_mvt" }
navara_worker = { path = "../navara_worker" }
navara_core = { path = "../navara_core" }
