[package]
name = "navara_ecs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
debug = ["dep:bevy_log"]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
serde_json.workspace = true
bevy_log = { workspace = true, optional = true }
navara_buffer_store.workspace = true
navara_camera.workspace = true
navara_fog.workspace = true
navara_data_requester.workspace = true
navara_event.workspace = true
navara_event_store.workspace = true
navara_feature.workspace = true
navara_geojson.workspace = true
navara_input.workspace = true
navara_layer.workspace = true
navara_layer_event.workspace = true
navara_mesh.workspace = true
navara_occluder.workspace = true
navara_texture_fragment.workspace = true
navara_tile.workspace = true
navara_tile_component.workspace = true
navara_window.workspace = true
navara_math.workspace = true
navara_cesium3dtiles.workspace = true
navara_mvt.workspace = true
navara_worker.workspace = true
navara_core.workspace = true
navara_frame.workspace = true
navara_feature_component.workspace = true
navara_material.workspace = true
navara_component.workspace = true
navara_parser.workspace = true
navara_globe.workspace = true

# test v3
