[package]
name = "navara_event"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
navara_event_store = { path = "../navara_event_store" }
navara_math = { path = "../navara_math" }
navara_texture_fragment = { path = "../navara_texture_fragment" }
navara_feature_component = { path = "../navara_feature_component" }
navara_mesh = { path = "../navara_mesh" }
navara_material = { path = "../navara_material" }
navara_tile_component = { path = "../navara_tile_component" }
navara_data_requester = { path = "../navara_data_requester" }
navara_worker = { path = "../navara_worker" }
navara_layer = { path = "../navara_layer" }
navara_camera = { path = "../navara_camera" }