[package]
name = "navara_event"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
navara_event_store.workspace = true
navara_math.workspace = true
navara_texture_fragment.workspace = true
navara_feature_component.workspace = true
navara_mesh.workspace = true
navara_material.workspace = true
navara_tile_component.workspace = true
navara_data_requester.workspace = true
navara_worker.workspace = true
navara_layer.workspace = true
navara_camera.workspace = true
navara_globe.workspace = true
