[package]
name = "navara_feature"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = "0.14.1"
bevy_ecs = "0.14.1"
navara_event_store = { path = "../navara_event_store" }
navara_math = { path = "../navara_math" }
navara_layer = { path = "../navara_layer" }
navara_core = { path = "../navara_core" }
navara_tile = { path = "../navara_tile" }
navara_mesh = { path = "../navara_mesh" }
navara_buffer_store = { path = "../navara_buffer_store" }
navara_data_requester = { path = "../navara_data_requester" }
