[package]
name = "navara_feature"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_event_store = { path = "../navara_event_store" }
navara_math = { path = "../navara_math" }
navara_material = { path = "../navara_material" }
navara_core = { path = "../navara_core" }
navara_tile_component = { path = "../navara_tile_component" }
navara_mesh = { path = "../navara_mesh" }
navara_buffer_store = { path = "../navara_buffer_store" }
navara_data_requester = { path = "../navara_data_requester" }
navara_geometry = { path = "../navara_geometry" }
navara_feature_component = { path = "../navara_feature_component" }
navara_layer = { path = "../navara_layer" }
navara_worker = { path = "../navara_worker" }
navara_component = { path = "../navara_component" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true