[package]
name = "navara_feature"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_event_store.workspace = true
navara_math.workspace = true
navara_material.workspace = true
navara_core.workspace = true
navara_tile.workspace = true
navara_tile_component.workspace = true
navara_mesh.workspace = true
navara_buffer_store.workspace = true
navara_data_requester.workspace = true
navara_geometry.workspace = true
navara_feature_component.workspace = true
navara_layer.workspace = true
navara_mvt.workspace = true
navara_worker.workspace = true
navara_component.workspace = true
navara_camera.workspace = true
navara_occluder.workspace = true
navara_window.workspace = true

[dev-dependencies]
approx.workspace = true
