[package]
name = "navara_feature_component"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_event_store = { path = "../navara_event_store" }
navara_math = { path = "../navara_math" }
navara_material = { path = "../navara_material" }
navara_core = { path = "../navara_core" }
navara_tile_component = { path = "../navara_tile_component" }
navara_mesh = { path = "../navara_mesh" }
navara_buffer_store = { path = "../navara_buffer_store" }
navara_data_requester = { path = "../navara_data_requester" }
navara_geometry = { path = "../navara_geometry" }
navara_layer = { path = "../navara_layer" }
rand = "0.8.0"