[package]
name = "navara_feature_component"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
getrandom.workspace = true
navara_event_store.workspace = true
navara_math.workspace = true
navara_material.workspace = true
navara_core.workspace = true
navara_tile_component.workspace = true
navara_mesh.workspace = true
navara_buffer_store.workspace = true
navara_data_requester.workspace = true
navara_geometry.workspace = true
navara_layer.workspace = true
navara_component.workspace = true
navara_parser.workspace = true
geozero.workspace = true
prost.workspace = true
