[package]
name = "navara_font"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rustybuzz.workspace = true
fontsdf.workspace = true
guillotiere.workspace = true
rustc-hash.workspace = true
bevy_log.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
