[package]
name = "navara_font"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["bevy"]
bevy = ["dep:bevy_ecs", "dep:bevy_app", "dep:bevy_log"]

[dependencies]
rustybuzz.workspace = true
fontsdf.workspace = true
guillotiere.workspace = true
rustc-hash.workspace = true
bevy_log = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_app = { workspace = true, optional = true }
