[package]
name = "navara_frame"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_input.workspace = true
bevy_log.workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = true

