[package]
name = "navara_geojson"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true
navara_core.workspace = true
navara_layer.workspace = true
navara_material.workspace = true
navara_math.workspace = true
navara_parser.workspace = true
navara_feature_component.workspace = true
navara_tile_component.workspace = true
navara_buffer_store.workspace = true
navara_data_requester.workspace = true
navara_event_store.workspace = true
navara_geometry.workspace = true
navara_component.workspace = true
navara_geojson_vt.workspace = true
navara_vector_tile.workspace = true
navara_camera.workspace = true
navara_fog.workspace = true
navara_frame.workspace = true
navara_globe.workspace = true
navara_occluder.workspace = true
navara_window.workspace = true

[dev-dependencies]
navara_feature.workspace = true
