[package]
name = "navara_geojson_vt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
geojson_lib.workspace = true
navara_quadtree.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
approx.workspace = true
serde.workspace = true
