[package]
name = "navara_geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy"]
bevy = ["dep:bevy_ecs"]

[dependencies]
bevy_log = "0.14.1"
bevy_ecs = { version = "0.14.1", optional = true }
radians = "0.3.1"
itertools = "0.13.0"
navara_core = { path = "../navara_core" }
navara_math = { path = "../navara_math" }
navara_buffer_store = { path = "../navara_buffer_store" }
earcut = "0.4.1"
approx.workspace = true
