[package]
name = "navara_geometry"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy"]
bevy = ["dep:bevy_ecs"]

[dependencies]
bevy_log.workspace = true
bevy_ecs = { workspace = true, optional = true }
radians.workspace = true
itertools.workspace = true
serde.workspace = true
navara_core = { path = "../navara_core" }
navara_math = { path = "../navara_math" }
navara_buffer_store = { path = "../navara_buffer_store" }
earcutr = "0.5.0"
approx.workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true