[package]
name = "navara_geometry"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["bevy"]
bevy = ["dep:bevy_ecs"]

[dependencies]
bevy_log.workspace = true
bevy_ecs = { workspace = true, optional = true }
radians.workspace = true
itertools.workspace = true
serde.workspace = true
earcutr.workspace = true
approx.workspace = true
navara_core.workspace = true
navara_math.workspace = true
navara_buffer_store.workspace = true
rustc-hash.workspace = true
