[package]
name = "navara_input"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_input.workspace = true
bevy_log.workspace = true
navara_math = { path = "../navara_math" }
navara_window = { path = "../navara_window" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true