[package]
name = "navara_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
bevy_ecs = "0.12.1"
bevy_math = "0.12.1"
navara_core = { path = "../navara_core" }
navara_parser = { path = "../navara_parser" }
