[package]
name = "navara_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_core = { path = "../navara_core" }
navara_math = { path = "../navara_math" }
navara_parser = { path = "../navara_parser" }
navara_material = { path = "../navara_material" }
