[package]
name = "navara_layer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_core.workspace = true
navara_math.workspace = true
navara_parser.workspace = true
navara_material.workspace = true
rustc-hash.workspace = true
