[package]
name = "navara_layer_event"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_layer.workspace = true
navara_feature.workspace = true
navara_material.workspace = true
navara_core.workspace = true
navara_math.workspace = true
navara_buffer_store.workspace = true
