[package]
name = "navara_material"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
navara_math = { path = "../navara_math" }
navara_core = { path = "../navara_core" }
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = true

