[package]
name = "navara_math"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_math.workspace = true
bevy_ecs.workspace = true
bevy_transform.workspace = true
cfg-if.workspace = true
radians.workspace = true
approx.workspace = true

[features]
default = ["use_f32"]
use_f32 = []
use_f64 = []

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true