[package]
name = "navara_math"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["use_f32"]
use_f32 = []
use_f64 = []

[dependencies]
bevy_math.workspace = true
bevy_ecs.workspace = true
bevy_transform.workspace = true
cfg-if.workspace = true
radians.workspace = true
approx.workspace = true
