[package]
name = "navara_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_event_store = { path = "../navara_event_store" }
navara_math = { path = "../navara_math" }
navara_component = { path = "../navara_component" }
navara_buffer_store = { path = "../navara_buffer_store" }
navara_material = { path = "../navara_material" }
