[package]
name = "navara_mesh"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log.workspace = true
navara_event_store.workspace = true
navara_math.workspace = true
navara_component.workspace = true
navara_buffer_store.workspace = true
navara_material.workspace = true
navara_geometry.workspace = true
navara_globe.workspace = true
navara_core.workspace = true
