[package]
name = "navara_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
navara_math = { path = "../navara_math" }
navara_core = { path = "../navara_core" }
navara_camera = { path = "../navara_camera" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = true

